--- a/GitTestProject/.settings/org.eclipse.core.resources.prefs
+++ b/GitTestProject/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/tz/test/Test.java=UTF-8
+encoding//src/main/java/com/tz/test/Test2.java=UTF-8
